<resources>
    <string name="app_name">Safe.t</string>

    <string name="report">Report</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="location_data">Location Data</string>
    <string name="login_signup">Login or SignUp</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="symptom_checker_is_this_emergency">Is this an emergency? (if the person is observing any obvious symptoms listed)\n\n\u00E2\u0080\u00A2Severe, constant chest pain or pressure\n\u00E2\u0080\u00A2Extreme difficulty breathing\n\u00E2\u0080\u00A2Severe, constant lightheadedness\n\u00E2\u0080\u00A2Serious disorientation or unresponsiveness</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="we_need_to_ask_more_questions_to_understand_your_situation">We\u00E2\u0080\u0099ll need to ask more questions to understand your situation.</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="under_18">Under 18</string>
    <string name="between_18To64">18-64</string>
    <string name="above_64">Above 64</string>
    <string name="have_you_been_to_crowded_places">Have you been to crowed places like supermarket, big store etc.?</string>
    <string name="are_you_working_in_hospital">Are you working in hospital?</string>
    <string name="questions_about_recent_exposure">Questions about recent exposure, field of employment (if medical or not) and residential arrangement(care facility, nursing homes, etc)</string>
    <string name="done">Done</string>
    <string name="location_access_and_bluetooth">Enable Location Access</string>
    <string name="reason_location_access_and_bluetooth">This app works best when enabling location and bluetooth access at all times.</string>
    <string name="what_location_and_bluetooth_do">With location data, it detects places where people gather &amp; highlights you the risk area near you</string>
    <string name="my_appointment">My Appointment</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="about_us">About us</string>
    <string name="search_area">Search area</string>
    <string name="high_density">High density</string>
    <string name="high_risk">High risk</string>
    <string name="symptom_checker">Symptom Checker</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="seek_care_immediately">Based on your reported symptoms, you should seek care immediately.</string>
    <string name="symptom_checker_yes_suggestion">We sugguest you to book a test appointment.</string>
    <string name="symptom_checker_yes_book_appointment">Book appointment</string>
    <string name="list_of_hospitals">Here is a list of hospitals near you</string>
    <string name="book_appointment_map_view">Map view</string>
    <string name="book_appointment_list_view">List view</string>
    <string name="next_button_text">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bluetooth">Enable Bluetooth Access</string>
    <string name="location_access_and_exposure_notif">Enable Location access, permission to send Exposure Notifications</string>
    <string name="location_access">Enable Location Access</string>
    <string name="exposure_and_push_alerts">Allow us to send exposure and push notifications</string>
    <string name="autostart_permissions">Allow the app to autostart</string>
    <string name="pref_previously_started">isFirstRun</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="enable_location">Enable Location</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="enable_autostart">Enable Auto-Start Settings</string>
    <string name="sharing">Sharing is caring</string>
    <string name="remind_your_family">Share the app with friends &amp; family, create a safe community</string>
    <string name="share_btn_text">Share</string>
    <string name="support_us">Support us and donate</string>
    <string name="donate">Donate</string>
    <string name="we_are_a_group">We are a group of volunteers from all over the world who have worked together on the Safe.t project in the past few months.</string>
    <string name="check_out_our_project">Check out our project website to learn more about our projects.</string>
    <string name="the_safet_project">The Safe.t project to proactively prevent the spread of COVID-19 while preserving privacy.\nProviding exposure alerts to citizens with accurate information &amp; guidelines.\nTracking of symptom progression and identification of asymptomatic + presymptomatic cases.</string>
    <string name="profile">Profile</string>
    <string name="you_will_answer_a_few_questions">You will answer a few questions about symptoms, travel and contact you have had with others.</string>
    <string name="your_answers_will_not_be_shared">"Your answers will not be shared with any 3rd parties without your permission. "</string>
    <string name="by_using_this_tool">By using this tool, you agree to its terms and that the app will not be liable for any harm relating to your use.</string>
    <string name="recommendations_provided">Recommendations provided are merely health suggestions, and should not be considered formal medical advice. All users who exhibit symptoms should consult a licensed doctor for further consultation.</string>
    <string name="view_the_terms">View the terms.</string>
    <string name="cont">Continue</string>
    <string name="covid_symptom_checker">COVID-19 Symptom Checker</string>
    <string name="age">How old are you?</string>
    <string name="based_on_your_reports">Based on your reported symptoms, you should seek care immediately.</string>
    <string name="book_appointment_suggestion">"Book an appointment.  "</string>
    <string name="based_on_low_risk">Based on your reported symptoms, your risk is low.</string>
    <string name="feedback">Tell us your feedback</string>
    <string name="share_app_btn_text">Share the app.</string>
    <string name="share_results"><![CDATA[Share your symptom checker results with friends & family]]></string>
    <string name="share_risk_score">Share my risk score.</string>
    <string name="we_suggest_to_book">We suggest you to book an appointment.</string>
    <string name="faq">FAQ</string>
    <string name="how_does_safet_work">How does Safe.t work?</string>
    <string name="where_is_my_data">Where will my data be stored?</string>
    <string name="contact_tracing_onboarding">Detects places where people gather &amp; highlight you the high risk area near you</string>
    <string name="skip">Skip</string>
    <string name="data_safe">Your data will be securely stored in the app</string>
    <string name="self_report"><![CDATA[Self reporting & booking appointment if you are in high risk of geting the virus]]></string>

</resources>
