<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.symptomChecker.SymptomCheckerHighRiskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seek_care_immediately"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/high_contrast"
            android:textSize="20sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_suggest_to_book"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textColor="@color/high_contrast"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_appointment_link"
            android:text="@string/book_appointment_suggestion"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/primary_green"
            android:textSize="16sp"
            android:layout_marginHorizontal="15dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_results"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"
                    android:textColor="@color/high_contrast"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/secondary_button_rounded"
                    android:id="@+id/share_score_button"
                    android:textAllCaps="false"
                    android:text="@string/share_risk_score"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="16sp"
                    android:textColor="@color/primary_green"/>

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remind_your_family"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"
                    android:textColor="@color/high_contrast"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/secondary_button_rounded"
                    android:id="@+id/share_app_button"
                    android:textAllCaps="false"
                    android:text="@string/share_app_btn_text"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="16sp"
                    android:textColor="@color/primary_green"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>