<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/whiteSmoke"
    tools:context=".activities.SettingsActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:background="@drawable/bottom_border"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/about_us_back_button"
                android:src="@drawable/ic_round_arrow_green_24"
                android:background="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_us"
                android:paddingEnd="60dp"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:textColor="@color/high_contrast"
                android:gravity="center"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_are_a_group"
        android:fontFamily="@font/roboto_regular"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:textColor="@color/high_contrast"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_safet_project"
        android:fontFamily="@font/roboto_regular"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:textColor="@color/high_contrast"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_out_our_project"
        android:fontFamily="@font/roboto_regular"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:textColor="@color/high_contrast"
        android:layout_margin="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        android:background="@drawable/settings_options"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_us"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:textColor="@color/high_contrast"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/secondary_button_rounded"
                android:id="@+id/donate_button"
                android:textAllCaps="false"
                android:text="@string/donate"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:textColor="@color/primary_green"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>