<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.symptomChecker.SymptomCheckerLowRiskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/based_on_low_risk"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/high_contrast"
            android:textSize="20sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/safe_2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharing"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="16sp"
                    android:textColor="@color/high_contrast"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remind_your_family"
                    android:textAlignment="center"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"
                    android:textColor="@color/high_contrast"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/secondary_button_rounded"
                    android:id="@+id/share_button"
                    android:textAllCaps="false"
                    android:text="@string/share_btn_text"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="16sp"
                    android:textColor="@color/primary_green"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feedback"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/primary_green"
            android:textSize="16sp"
            android:layout_marginHorizontal="15dp" />
    </LinearLayout>
</FrameLayout>