<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginOrSignUpActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="97dp"
            android:textColor="#000000"
            android:text="@string/login_signup"
    />

     <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="50dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="25dp"
             app:cornerRadius="15dp"
             android:elevation="0dp"
             android:text="@string/login"
             android:textSize="24sp"
             android:background="@color/cardview_shadow_start_color"
             android:id="@+id/login_button"
             />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            app:cornerRadius="15dp"
            android:elevation="0dp"
            android:text="@string/signup"
            android:textSize="24sp"
            android:id="@+id/signup_button"
            />


</LinearLayout>