<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/whiteSmoke"
    tools:context=".fragments.symptomChecker.SymptomCheckerYesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seek_care_immediately"
            android:fontFamily="@font/roboto_bold"
            android:id="@+id/symptom_checker_yes_heading"
            android:layout_marginHorizontal="20dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symptom_checker_yes_suggestion"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginHorizontal="20dp"/>
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/dark_button"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:text="@string/symptom_checker_yes_book_appointment"
            android:textColor="@color/whiteSmoke"
            android:textAllCaps="false"/>

    </LinearLayout>

</FrameLayout>